test/baseline/func-xact.test
2012-01-01 Test xact function
    Assets:Test                       $100.00
    Equity:Opening

test eval "xact()" -> 1
__ERROR__
While evaluating value expression:
  xact()
  ^^^^^^
Error: Unknown identifier 'xact'
end test
